--- a/Sphere/Client/Component/Element/Repository/Navigation/LevelClient/Link.twig
+++ b/Sphere/Client/Component/Element/Repository/Navigation/LevelClient/Link.twig
@@ -1,5 +1,5 @@
 <li class="{{ ToggleActiveClass }}">
-    <a href="{{ RouteParameter }}">
+    <a href="{{ UrlParameter }}">
         <span class="{{ IconParameter }}"></span>
         {{ NameParameter }}
     </a>
