Research: Gatekeeper-Api

--- a/Sphere/Application/Gatekeeper/Client/Entrance/SignInManagement.twig
+++ b/Sphere/Application/Gatekeeper/Client/Entrance/SignInManagement.twig
@@ -3,10 +3,11 @@
         <div class="col-xs-2"></div>
         <div class="col-xs-8 text-center">
             <h1>Anmeldung
-                <small>Lehrer</small>
+                <small>Verwaltung</small>
             </h1>
             <hr/>
             <br/>
+
             <form class="form-horizontal" action="" method="post">
                 <div class="form-group {{ CredentialNameGroup }}">
                     <div class="input-group">
