--- a/Sphere/Application/Gatekeeper/Client/Entrance/SignInStudent.twig
+++ b/Sphere/Application/Gatekeeper/Client/Entrance/SignInStudent.twig
@@ -2,20 +2,31 @@
     <div class="row">
         <div class="col-xs-2"></div>
         <div class="col-xs-8 text-center">
-            <h1>Anmeldung</h1>
+            <h1>Anmeldung
+                <small>Schüler</small>
+            </h1>
             <hr/>
+            <br/>
             <form class="form-horizontal" action="" method="post">
-                <div class="form-group">
+                <div class="form-group {{ CredentialNameGroup }}">
                     <div class="input-group">
-                        <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
-                        <input type="text" class="form-control" name="CredentialName" placeholder="Benutzername">
+                        <span class="input-group-addon">
+                            <span class="glyphicon glyphicon-user"></span>
+                        </span>
+                        <input type="text" class="form-control" name="CredentialName" placeholder="Benutzername"/>
+                        {{ CredentialNameFeedbackIcon }}
                     </div>
+                    {{ CredentialNameFeedbackMessage }}
                 </div>
-                <div class="form-group">
+                <div class="form-group {{ CredentialLockGroup }}">
                     <div class="input-group">
-                        <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-                        <input type="password" class="form-control" name="CredentialLock" placeholder="Passwort">
+                        <span class="input-group-addon">
+                            <span class="glyphicon glyphicon-lock"></span>
+                        </span>
+                        <input type="password" class="form-control" name="CredentialLock" placeholder="Passwort"/>
+                        {{ CredentialLockFeedbackIcon }}
                     </div>
+                    {{ CredentialLockFeedbackMessage }}
                 </div>
                 <div class="form-group">
                     <div class="input-group">
