--- a/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
+++ b/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
@@ -2,10 +2,41 @@
 <html>
 <head>
     <title>KREDA Professional</title>
+
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="description" content="KREDA Professional"/>
+
+    <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/"/>
+    <link rel="schema.DCTERMS" href="http://purl.org/dc/terms/"/>
+
     <link rel="stylesheet" href="{{ PathBase }}/Library/Bootstrap/3.2.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/css/bootflat.css">
+
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+    <link rel="apple-touch-icon" href="apple-touch-icon.png"/>
+
+    <style>
+        h1 small,
+        h2 small,
+        h3 small,
+        h4 small,
+        h5 small,
+        h6 small,
+        .h1 small,
+        .h2 small,
+        .h3 small,
+        .h4 small,
+        .h5 small,
+        .h6 small {
+            color: #999;
+        }
+
+        hr {
+            border-top: 1px solid #999;
+        }
+    </style>
 </head>
 <body>
 
