Research: Application-Api

--- a/Sphere/Application/Gatekeeper/Client/Entrance/SignIn.twig
+++ b/Sphere/Application/Gatekeeper/Client/Entrance/SignIn.twig
@@ -1,13 +1,13 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-xs-2"></div>
-        <div class="col-xs-8 text-center">
+        <div class="col-md-2"></div>
+        <div class="col-md-8 col-xs-12 text-center">
             <h1>Anmelden</h1>
             <hr/>
             <div>Sie werden am System angemeldet...</div>
             <meta http-equiv="Refresh" content="2; URL={{ UrlBase }}/Sphere/Assistance" property="">
             <script language=javascript>setTimeout( "location.href='{{ UrlBase }}/Sphere/Assistance'", 2000 );</script>
         </div>
-        <div class="col-xs-2"></div>
+        <div class="col-md-2"></div>
     </div>
 </div>
