--- a/Sphere/Client/Component/Element/Repository/Navigation/LevelApplication/Link.twig
+++ b/Sphere/Client/Component/Element/Repository/Navigation/LevelApplication/Link.twig
@@ -1,6 +1,6 @@
 <li class="{{ ToggleActiveClass }}">
     <a href="{{ UrlParameter }}">
-        <span class="{{ IconParameter }}"></span>
+        <span class="{{ IconParameter }}"></span>&nbsp;
         {{ NameParameter }}
     </a>
 </li>
