--- a/Sphere/Application/Gatekeeper/Client/Entrance/SignOut.twig
+++ b/Sphere/Application/Gatekeeper/Client/Entrance/SignOut.twig
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-xs-2"></div>
-        <div class="col-xs-8 text-center">
+        <div class="col-md-2"></div>
+        <div class="col-md-8 col-xs-12 text-center">
             <h1>Abmelden</h1>
             <hr/>
             <div>Sie werden vom System abgemeldet...</div>
@@ -9,6 +9,6 @@
             <script language=javascript>setTimeout( "location.href='{{ UrlBase }}/Sphere/Gatekeeper/SignIn'",
                     2000 );</script>
         </div>
-        <div class="col-xs-2"></div>
+        <div class="col-md-2"></div>
     </div>
 </div>
