--- a/Sphere/Application/Gatekeeper/Client/SignIn/SignInManagement.twig
+++ b/Sphere/Application/Gatekeeper/Client/SignIn/SignInManagement.twig
@@ -1,12 +1,13 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-xs-2"></div>
-        <div class="col-xs-8 text-center">
+        <div class="col-md-2"></div>
+        <div class="col-md-8 col-xs-12 text-center">
             <h1>Anmeldung
-                <small>Lehrer</small>
+                <small>Verwaltung</small>
             </h1>
             <hr/>
             <br/>
+
             <form class="form-horizontal" action="" method="post">
                 <div class="form-group {{ CredentialNameGroup }}">
                     <div class="input-group">
@@ -47,6 +48,6 @@
                 </div>
             </form>
         </div>
-        <div class="col-xs-2"></div>
+        <div class="col-md-2"></div>
     </div>
 </div>
