--- a/Sphere/Application/Gatekeeper/Client/SignIn/SignInStudent.twig
+++ b/Sphere/Application/Gatekeeper/Client/SignIn/SignInStudent.twig
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-xs-2"></div>
-        <div class="col-xs-8 text-center">
+        <div class="col-md-2"></div>
+        <div class="col-md-8 col-xs-12 text-center">
             <h1>Anmeldung
                 <small>Schüler</small>
             </h1>
@@ -35,6 +35,6 @@
                 </div>
             </form>
         </div>
-        <div class="col-xs-2"></div>
+        <div class="col-md-2"></div>
     </div>
 </div>
