Research: Service-Api

--- a/Sphere/Application/Gatekeeper/Client/Redirect/SignIn.twig
+++ b/Sphere/Application/Gatekeeper/Client/Redirect/SignIn.twig
@@ -5,8 +5,18 @@
             <h1>Anmelden</h1>
             <hr/>
             <div>Sie werden am System angemeldet...</div>
+            <br/>
+
+            <div>
+                <small>Sollten sie nicht automatisch weitergeleitet werden, klicken Sie bitte hier</small>
+            </div>
+            <br/>
+
+            <div>
+                <a href="{{ UrlBase }}/Sphere/Assistance" class="btn btn-primary">Weiter</a>
+            </div>
             <meta http-equiv="Refresh" content="2; URL={{ UrlBase }}/Sphere/Assistance" property="">
-            <script language=javascript>setTimeout( "location.href='{{ UrlBase }}/Sphere/Assistance'", 2000 );</script>
+            <script language=javascript>setTimeout( "location.href='{{ UrlBase }}/Sphere/Assistance'", 1500 );</script>
         </div>
         <div class="col-md-2"></div>
     </div>
