--- a/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
+++ b/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="{{ PathBase }}/Library/Bootstrap/3.2.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/css/bootflat.css">
 
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
-    <link rel="apple-touch-icon" href="apple-touch-icon.png"/>
+    <link rel="shortcut icon" type="image/x-icon" href="{{ PathBase }}/favicon.ico"/>
+    <link rel="apple-touch-icon" href="{{ PathBase }}/apple-touch-icon.png"/>
 
     <style>
         h1 small,
@@ -42,7 +42,7 @@
 
 {{ PositionNavigation }}
 
-<br/>
+
 
 {{ PositionContent }}
 
