Research: Access-Api

--- a/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
+++ b/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
@@ -13,30 +13,11 @@
 
     <link rel="stylesheet" href="{{ PathBase }}/Library/Bootstrap/3.2.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/css/bootflat.css">
+    <link rel="stylesheet" href="{{ PathBase }}/Sphere/Client/Style/Style.css"/>
 
     <link rel="shortcut icon" type="image/x-icon" href="{{ PathBase }}/favicon.ico"/>
     <link rel="apple-touch-icon" href="{{ PathBase }}/apple-touch-icon.png"/>
 
-    <style>
-        h1 small,
-        h2 small,
-        h3 small,
-        h4 small,
-        h5 small,
-        h6 small,
-        .h1 small,
-        .h2 small,
-        .h3 small,
-        .h4 small,
-        .h5 small,
-        .h6 small {
-            color: #999;
-        }
-
-        hr {
-            border-top: 1px solid #999;
-        }
-    </style>
 </head>
 <body>
 
