Research: YubiKey, Database-Service

--- a/Sphere/Application/Gatekeeper/Client/SignIn/SignInManagement.twig
+++ b/Sphere/Application/Gatekeeper/Client/SignIn/SignInManagement.twig
@@ -36,7 +36,7 @@
                         <span class="input-group-addon">
                             <span class="glyphicon glyphicon-certificate"></span>
                         </span>
-                        <input type="password" class="form-control" name="CredentialKey" placeholder="Yubi-Key">
+                        <input type="password" class="form-control" name="CredentialKey" placeholder="YubiKey">
                         {{ CredentialKeyFeedbackIcon }}
                     </div>
                     {{ CredentialKeyFeedbackMessage }}
