--- a/Sphere/Client/Component/Element/Repository/Shell/Landing.twig
+++ b/Sphere/Client/Component/Element/Repository/Shell/Landing.twig
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-md-2 col-xs-1"></div>
         <div class="col-md-8 col-xs-10 text-center">
-            <h1>{{ LandingTitle }}</h1>
+            <h1>{{ LandingTitle }} {{ LandingDescription }}</h1>
             <hr/>
             <div>{{ LandingMessage }}</div>
             <br/>
