Code Review: Refactor

--- a/Sphere/Application/Gatekeeper/Client/SignIn/SignInManagement.twig
+++ b/Sphere/Application/Gatekeeper/Client/SignIn/SignInManagement.twig
@@ -44,6 +44,8 @@
                 <div class="form-group">
                     <div class="input-group">
                         <button type="submit" class="btn btn-primary">Anmelden</button>
+                        <a class="btn btn-link" href="{{ UrlBase }}/Sphere/Assistance/Account/Password/Forgotten">Passwort
+                            vergessen</a>
                     </div>
                 </div>
             </form>
