--- a/Sphere/Client/Component/Element/Repository/Content/Stage.twig
+++ b/Sphere/Client/Component/Element/Repository/Content/Stage.twig
@@ -11,11 +11,13 @@
                     <div>{{ StageMessage }}</div>
                 </div>
                 <div class="col-lg-4 col-md-5 col-sm-6 visible-sm visible-md visible-lg text-right">
+                    {% if StageMenu is not empty %}
                     <div class="btn-group">
                         {% for Route, Title in StageMenu %}
                             <a href="{{ Route }}" class="btn btn-primary">{{ Title }}</a>
                         {% endfor %}
                     </div>
+                    {% endif %}
                 </div>
             </div>
             <hr/>
