--- a/Sphere/Application/Assistance/Service/Youtrack/Youtrack.twig
+++ b/Sphere/Application/Assistance/Service/Youtrack/Youtrack.twig
@@ -1,4 +1,8 @@
 <form class="form-horizontal" action="" method="post">
+
+    <h3>
+        <small>Zusammenfassung</small>
+    </h3>
     <div class="form-group {{ TicketSubjectGroup }}">
         <div class="input-group">
             <span class="input-group-addon">
@@ -10,47 +14,30 @@
         </div>
         {{ TicketSubjectFeedbackMessage }}
     </div>
+
+    <h3>
+        <small>Problembeschreibung</small>
+    </h3>
     <div class="form-group {{ TicketMessageGroup }}">
         <div class="input-group">
             <span class="input-group-addon">
                 <span class="glyphicon glyphicon-comment"></span>
             </span>
             <textarea name="TicketMessage" class="form-control" placeholder="Mitteilung"
-                      rows="10">{{ TicketMessageValue }}</textarea>
+                      rows="5">{{ TicketMessageValue }}</textarea>
             {{ TicketMessageFeedbackIcon }}
         </div>
         {{ TicketMessageFeedbackMessage }}
     </div>
+
     <div class="form-group">
         <div class="input-group">
-            <button type="submit" class="btn btn-primary">Absenden</button>
+            <button type="submit" class="btn btn-primary">Ticket eröffnen</button>
         </div>
     </div>
 </form>
 
-<script type="text/javascript">
-    function createIssue()
-    {
-        jQuery.ajax({
-            url: "http://ticket.haus-der-edv.de" +
-            "/youtrack/rest/issue",
-            dataType: "json",
-            type: "POST",
-            data: {
-                project: 'KREDA',
-                summary: jQuery("#summary").val(),
-                description: jQuery("#description").val()
-            }
-        }).done(function (data)
-        {
-            jQuery("#result").show();
-            jQuery("#summary").val('');
-            jQuery("#description").val('');
-        });
-    }
-
-    jQuery(function ()
-    {
-        jQuery("#result").hide();
-    })
-</script>
+<div class="alert alert-warning">
+    <span class="glyphicon glyphicon-info-sign"></span>
+    Bitte teilen Sie uns so genau wie möglich mit wie es zu diesem Problem kam
+</div>
