--- a/Sphere/Application/Gatekeeper/Client/Redirect/SignIn.twig
+++ b/Sphere/Application/Gatekeeper/Client/Redirect/SignIn.twig
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8 col-xs-12 text-center">
+        <div class="col-md-2 col-xs-1"></div>
+        <div class="col-md-8 col-xs-10 text-center">
             <h1>Anmelden</h1>
             <hr/>
             <div>Sie werden am System angemeldet...</div>
@@ -13,11 +13,11 @@
             <br/>
 
             <div>
-                <a href="{{ UrlBase }}/Sphere/Assistance" class="btn btn-primary">Weiter</a>
+                <a href="{{ UrlBase }}/Sphere" class="btn btn-primary">Weiter</a>
             </div>
-            <meta http-equiv="Refresh" content="1; URL={{ UrlBase }}/Sphere/Assistance" property="">
-            <script language=javascript>setTimeout( "location.href='{{ UrlBase }}/Sphere/Assistance'", 1000 );</script>
+            <meta http-equiv="Refresh" content="1; URL={{ UrlBase }}/Sphere" property="">
+            <script language=javascript>setTimeout( "location.href='{{ UrlBase }}/Sphere'", 1000 );</script>
         </div>
-        <div class="col-md-2"></div>
+        <div class="col-md-2 col-xs-1"></div>
     </div>
 </div>
