--- a/Sphere/Client/Component/Element/Repository/Navigation/LevelClient/Main.twig
+++ b/Sphere/Client/Component/Element/Repository/Navigation/LevelClient/Main.twig
@@ -3,14 +3,15 @@
      style="border-radius: inherit; margin: inherit;">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xs-3">
+            <div class="col-xs-4 col-sm-1 col-md-3 col-lg-3">
                 <div class="navbar-header">
                     <div class="navbar-text">
-                        KREDA Professional
+                        KREDA
+                        <span class="visible-xs-inline visible-md-inline visible-lg-inline"> Professional</span>
                     </div>
                 </div>
             </div>
-            <div class="col-xs-9">
+            <div class="col-xs-8 col-sm-11 col-md-9 col-lg-9">
                 <ul class="nav navbar-nav navbar-left">
                     {{ PositionMain }}
                 </ul>
