--- a/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
+++ b/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
@@ -11,9 +11,9 @@
     <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/"/>
     <link rel="schema.DCTERMS" href="http://purl.org/dc/terms/"/>
 
-    <link rel="stylesheet" href="{{ PathBase }}/Library/Bootstrap/3.2.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/css/bootflat.css">
-    <link rel="stylesheet" href="{{ PathBase }}/Sphere/Client/Style/Style.css"/>
+    <link rel="stylesheet" href="{{ PathBase }}/Library/Bootstrap/3.2.0/dist/css/bootstrap.min.css" property="">
+    <link rel="stylesheet" href="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/css/bootflat.css" property="">
+    <link rel="stylesheet" href="{{ PathBase }}/Sphere/Client/Style/Style.css" property=""/>
 
     <link rel="shortcut icon" type="image/x-icon" href="{{ PathBase }}/favicon.ico"/>
     <link rel="apple-touch-icon" href="{{ PathBase }}/apple-touch-icon.png"/>
