--- a/Sphere/Client/Component/Element/Repository/Shell/Error.twig
+++ b/Sphere/Client/Component/Element/Repository/Shell/Error.twig
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-2 col-xs-1"></div>
         <div class="col-md-8 col-xs-10 text-center">
-            <h1 class="text-danger">Es ist ein Fehler aufgetreten</h1>
+            <h1 class="text-danger">Es ist ein unerwarteter Fehler aufgetreten</h1>
             <hr/>
             <div class="alert alert-warning text-left">
                 Typ <strong>{{ ErrorCode }}</strong>
