Research: Mobile-Navigation

--- a/Sphere/Client/Component/Element/Repository/Navigation/LevelClient/Main.twig
+++ b/Sphere/Client/Component/Element/Repository/Navigation/LevelClient/Main.twig
@@ -12,13 +12,23 @@
                 </div>
             </div>
             <div class="col-xs-8 col-sm-11 col-md-9 col-lg-9">
-                <ul class="nav navbar-nav navbar-left">
-                    {{ PositionMain }}
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    {{ PositionMeta }}
-                </ul>
+                <div class="navbar-collapse collapse" id="LevelClient">
+                    <ul class="nav navbar-nav navbar-left">
+                        {{ PositionMain }}
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        {{ PositionMeta }}
+                    </ul>
+                </div>
             </div>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#LevelClient"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
         </div>
     </div>
 </nav>
