--- a/Sphere/Client/Component/Element/Repository/Navigation/LevelModule/Main.twig
+++ b/Sphere/Client/Component/Element/Repository/Navigation/LevelModule/Main.twig
@@ -1,12 +1,23 @@
 <!-- Navigation (Level:Module) -->
-<nav class="navbar navbar-default" role="navigation" style="border-radius: inherit; margin: inherit; border-bottom: 1px solid #DDD;">
+<nav class="navbar navbar-default" role="navigation"
+     style="border-radius: inherit; margin: inherit; border-bottom: 1px solid #DDD;">
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-12">
-                <ul class="nav navbar-nav navbar-left">
-                    {{ PositionMain }}
-                </ul>
+                <div class="navbar-collapse collapse" id="LevelModule">
+                    <ul class="nav navbar-nav navbar-left">
+                        {{ PositionMain }}
+                    </ul>
+                </div>
             </div>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#LevelModule"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
         </div>
     </div>
 </nav>
