--- a/Sphere/Client/Component/Element/Repository/Navigation/LevelClient/Main.twig
+++ b/Sphere/Client/Component/Element/Repository/Navigation/LevelClient/Main.twig
@@ -24,10 +24,16 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                     data-target="#LevelClient"
                     aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+                <span class="pull-left">
+                    <a>{{ PositionBreadcrumb }}</a>
+                </span>
+                <span class="pull-right">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </span>
             </button>
         </div>
     </div>
