--- a/Sphere/Client/Component/Element/Repository/Navigation/LevelModule/Main.twig
+++ b/Sphere/Client/Component/Element/Repository/Navigation/LevelModule/Main.twig
@@ -6,10 +6,16 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                     data-target="#LevelModule"
                     aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+                <span class="pull-left">
+                    <a>{{ PositionBreadcrumb }}</a>
+                </span>
+                <span class="pull-right">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </span>
             </button>
             <div class="col-xs-12">
                 <div class="navbar-collapse collapse" id="LevelModule">
