Code Review: Refactor

--- a/Sphere/Application/System/Service/Token/Certification.twig
+++ b/Sphere/Application/System/Service/Token/Certification.twig
@@ -15,3 +15,27 @@
         </div>
     </div>
 </form>
+
+<br/>
+<h3>Zertifizierte Hardware-Schlüssel
+    <small>YubiKey</small>
+</h3>
+<hr/>
+
+<table class="table">
+    <thead>
+    <tr>
+        <th>Gerätenummer</th>
+        <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for Id, Token in TokenList %}
+        <tr>
+            <td>aflmhaserhig</td>
+            <td>2</td>
+            <td>2</td>
+        </tr>
+    {% endfor %}
+    </tbody>
+</table>
