--- a/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
+++ b/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
@@ -26,6 +26,10 @@
 
 {{ PositionContent }}
 
+<hr/>
+
+{{ PositionDebugger }}
+
 <!-- Bootstrap -->
 <script src="{{ PathBase }}/Library/Bootstrap/3.2.0/dist/js/bootstrap.min.js"></script>
 <!-- Bootflat's JS files.-->
