--- a/TestSuite/Report/Coverage.xml
+++ b/TestSuite/Report/Coverage.xml
@@ -1,6 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<coverage generated="1415011732">
-  <project timestamp="1415011732">
-    <metrics files="0" loc="0" ncloc="0" classes="0" methods="0" coveredmethods="0" conditionals="0" coveredconditionals="0" statements="0" coveredstatements="0" elements="0" coveredelements="0"/>
+<coverage generated="1416853059">
+    <project timestamp="1416853059">
+        <package name="KREDA\TestSuite\Tests\Application">
+            <file name="W:\WebProject\KREDA-Sphere\TestSuite\Tests\Application/ApplicationTest.php">
+                <class name="ApplicationTest" namespace="KREDA\TestSuite\Tests\Application" fullPackage="KREDA"
+                       package="KREDA">
+                    <metrics methods="1" coveredmethods="1" conditionals="0" coveredconditionals="0" statements="3"
+                             coveredstatements="3" elements="4" coveredelements="4"/>
+                </class>
+                <line num="0" type="stmt" count="1"/>
+                <line num="12" type="method" name="testAbstractClass" crap="1" count="1"/>
+                <line num="16" type="stmt" count="1"/>
+                <line num="18" type="stmt" count="1"/>
+                <line num="19" type="stmt" count="1"/>
+                <line num="1334" type="stmt" count="1"/>
+                <metrics loc="21" ncloc="15" classes="1" methods="1" coveredmethods="1" conditionals="0"
+                         coveredconditionals="0" statements="3" coveredstatements="3" elements="4" coveredelements="4"/>
+            </file>
+        </package>
+        <package name="KREDA\TestSuite\Tests\Application\Gatekeeper\Service">
+            <file name="W:\WebProject\KREDA-Sphere\TestSuite\Tests\Application/Gatekeeper/Service/TokenTest.php">
+                <class name="TokenTest" namespace="KREDA\TestSuite\Tests\Application\Gatekeeper\Service"
+                       fullPackage="KREDA" package="KREDA">
+                    <metrics methods="1" coveredmethods="1" conditionals="0" coveredconditionals="0" statements="1"
+                             coveredstatements="1" elements="2" coveredelements="2"/>
+                </class>
+                <line num="12" type="method" name="testConstructor" crap="1" count="1"/>
+                <line num="15" type="stmt" count="1"/>
+                <metrics loc="17" ncloc="12" classes="1" methods="1" coveredmethods="1" conditionals="0"
+                         coveredconditionals="0" statements="1" coveredstatements="1" elements="2" coveredelements="2"/>
+            </file>
+        </package>
+        <metrics files="2" loc="38" ncloc="27" classes="2" methods="2" coveredmethods="2" conditionals="0"
+                 coveredconditionals="0" statements="4" coveredstatements="4" elements="6" coveredelements="6"/>
   </project>
 </coverage>
