Code Review: Refactor

--- a/Sphere/Application/Gatekeeper/Client/Redirect/Custom.twig
+++ b/Sphere/Application/Gatekeeper/Client/Redirect/Custom.twig
@@ -20,8 +20,9 @@
             <br/>
             <br/>
             <meta http-equiv="Refresh" content="{{ Timeout }}; URL={{ UrlBase }}{{ Route }}" property="">
-            <script language=javascript>setTimeout( "location.href='{{ UrlBase }}{{ Route }}'",
-                    {{ Timeout }}000 );</script>
+            <script language=javascript>
+                setTimeout( "location.href='{{ UrlBase }}{{ Route }}'", {{ Timeout }}000 );
+            </script>
         </div>
         <div class="col-md-2 col-xs-1"></div>
     </div>
