--- a/Sphere/Application/Gatekeeper/Client/Redirect/SignOut.twig
+++ b/Sphere/Application/Gatekeeper/Client/Redirect/SignOut.twig
@@ -16,8 +16,9 @@
                 <a href="{{ UrlBase }}/Sphere/Gatekeeper/SignIn" class="btn btn-primary">Weiter</a>
             </div>
             <meta http-equiv="Refresh" content="1; URL={{ UrlBase }}/Sphere/Gatekeeper/SignIn" property="">
-            <script language=javascript>setTimeout( "location.href='{{ UrlBase }}/Sphere/Gatekeeper/SignIn'",
-                    1000 );</script>
+            <script language=javascript>
+                setTimeout( "location.href='{{ UrlBase }}/Sphere/Gatekeeper/SignIn'", 1000 );
+            </script>
         </div>
         <div class="col-md-2 col-xs-1"></div>
     </div>
