--- a/Sphere/Application/Gatekeeper/Client/Redirect/SignIn.twig
+++ b/Sphere/Application/Gatekeeper/Client/Redirect/SignIn.twig
@@ -16,7 +16,9 @@
                 <a href="{{ UrlBase }}/Sphere" class="btn btn-primary">Weiter</a>
             </div>
             <meta http-equiv="Refresh" content="1; URL={{ UrlBase }}/Sphere" property="">
-            <script language=javascript>setTimeout( "location.href='{{ UrlBase }}/Sphere'", 1000 );</script>
+            <script language=javascript>
+                setTimeout( "location.href='{{ UrlBase }}/Sphere'", 1000 );
+            </script>
         </div>
         <div class="col-md-2 col-xs-1"></div>
     </div>
