--- a/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
+++ b/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
@@ -12,7 +12,7 @@
     <link rel="schema.DCTERMS" href="http://purl.org/dc/terms/"/>
 
     <link rel="stylesheet" href="{{ PathBase }}/Library/Bootstrap/3.2.0/dist/css/bootstrap.min.css" property="">
-    <link rel="stylesheet" href="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/css/bootflat.css" property="">
+    {#<link rel="stylesheet" href="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/css/bootflat.css" property="">#}
     <link rel="stylesheet" href="{{ PathBase }}/Sphere/Client/Style/Style.css" property=""/>
 
     <link rel="shortcut icon" type="image/x-icon" href="{{ PathBase }}/favicon.ico"/>
@@ -26,16 +26,33 @@
 
 {{ PositionContent }}
 
-<hr/>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-12 footer  small">
+            <div class="clearfix">
+                {#<div class="footer-logo">#}
+                {#<a href="#"><img src="img/footer-logo.png">Bootflat</a>#}
+                {#</div>#}
+                {#<dl class="footer-nav">#}
+                {#<dt class="nav-title">PORTFOLIO</dt>#}
+                {#<dd class="nav-item"><a href="#">Web Design</a></dd>#}
+                {#</dl>#}
+            </div>
+            <div class="footer-copyright text-center">© 2014 - Erstellt in {{ PositionRuntime }}</div>
 
-{{ PositionDebugger }}
+            <div>
+                {{ PositionDebugger }}
+            </div>
+        </div>
+    </div>
+</div>
 
 <!-- Bootstrap -->
 <script src="{{ PathBase }}/Library/Bootstrap/3.2.0/dist/js/bootstrap.min.js"></script>
 <!-- Bootflat's JS files.-->
-<script src="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/js/icheck.min.js"></script>
-<script src="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/js/jquery.fs.selecter.min.js"></script>
-<script src="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/js/jquery.fs.stepper.min.js"></script>
+{#<script src="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/js/icheck.min.js"></script>#}
+{#<script src="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/js/jquery.fs.selecter.min.js"></script>#}
+{#<script src="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/js/jquery.fs.stepper.min.js"></script>#}
 </body>
 </html>
 
