Code Review: Refactor

--- a/Sphere/Application/Gatekeeper/Authentication/SignIn/SignInSwitch.twig
+++ b/Sphere/Application/Gatekeeper/Authentication/SignIn/SignInSwitch.twig
@@ -1,5 +1,8 @@
 <div class="btn-group">
-    <a href="{{ UrlBase }}/Sphere/Gatekeeper/SignIn/Teacher" class="btn btn-primary">Lehrer</a>
-    <a href="{{ UrlBase }}/Sphere/Gatekeeper/SignIn/Management" class="btn btn-primary">Verwaltung</a>
-    <a href="{{ UrlBase }}/Sphere/Gatekeeper/SignIn/Student" class="btn btn-primary">Schüler</a>
+    <a href="{{ UrlBase }}/Sphere/Gatekeeper/SignIn/Student" class="btn btn-primary"><span
+            class="glyphicon glyphicon-lock"></span> Schüler</a>
+    <a href="{{ UrlBase }}/Sphere/Gatekeeper/SignIn/Teacher" class="btn btn-primary"><span
+            class="glyphicon glyphicon-lock"></span> Lehrer</a>
+    <a href="{{ UrlBase }}/Sphere/Gatekeeper/SignIn/Management" class="btn btn-primary"><span
+            class="glyphicon glyphicon-lock"></span> Verwaltung</a>
 </div>
