--- a/Sphere/Application/Gatekeeper/Authentication/Common/Redirect.twig
+++ b/Sphere/Application/Gatekeeper/Authentication/Common/Redirect.twig
@@ -9,6 +9,7 @@
 <br/>
 <br/>
 <meta http-equiv="Refresh" content="{{ Timeout }}; URL={{ UrlBase }}{{ Route }}" property="">
+<!--suppress DynamicallyGeneratedCodeJS -->
 <script language=javascript>
     setTimeout( "location.href='{{ UrlBase }}{{ Route }}'", {{ Timeout }}000 );
 </script>
