--- a/Sphere/Application/System/Service/Database/Status.twig
+++ b/Sphere/Application/System/Service/Database/Status.twig
@@ -1,11 +1,10 @@
-<table class="table text-left table-responsive">
+<table class="table text-left table-responsive table-condensed">
     <thead>
     <tr>
         <th>Application</th>
         <th>Service / Consumer</th>
         <th>Database</th>
         <th>Status</th>
-        {#<th></th>#}
     </tr>
     </thead>
     <tbody>
@@ -18,26 +17,6 @@
                         <td style="vertical-align: middle;" class="small text-info">{{ Connection }}</td>
                         <td style="vertical-align: middle;" class="small text-warning">{{ Database }}</td>
                         <td style="vertical-align: middle;">{{ Status }}</td>
-                        {#<td style="vertical-align: middle;" class="text-right">#}
-                        {#<form class="form-inline" action="{{ RouteUpdate }}" method="post">#}
-                        {#<div class="form-group {{ CredentialKeyGroup }}">#}
-                        {#<div class="input-group">#}
-                        {#<span class="input-group-addon">#}
-                        {#<span class="glyphicon glyphicon-certificate"></span>#}
-                        {#</span>#}
-                        {#<input type="password" class="form-control" name="CredentialKey"#}
-                        {#placeholder="YubiKey">#}
-                        {#{{ CredentialKeyFeedbackIcon }}#}
-                        {#</div>#}
-                        {#{{ CredentialKeyFeedbackMessage }}#}
-                        {#</div>#}
-                        {#<div class="form-group">#}
-                        {#<div class="input-group">#}
-                        {#<button type="submit" class="btn btn-primary">Bearbeiten</button>#}
-                        {#</div>#}
-                        {#</div>#}
-                        {#</form>#}
-                        {#</td>#}
                     </tr>
                 {% endfor %}
             {% endfor %}
