--- a/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
+++ b/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
@@ -13,6 +13,9 @@
 
     <link rel="stylesheet" href="{{ PathBase }}/Library/Bootstrap/3.2.0/dist/css/bootstrap.min.css" property="">
     <link rel="stylesheet" href="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/css/bootflat.css" property="">
+    <link rel="stylesheet"
+          href="{{ PathBase }}/Library/Bootstrap.DateTimePicker/3.1.3/build/css/bootstrap-datetimepicker.min.css"
+          property="">
     <link rel="stylesheet" href="{{ PathBase }}/Sphere/Client/Style/Style.css" property=""/>
 
     <link rel="shortcut icon" type="image/x-icon" href="{{ PathBase }}/favicon.ico"/>
@@ -49,10 +52,21 @@
 
 <!-- Bootstrap -->
 <script src="{{ PathBase }}/Library/Bootstrap/3.2.0/dist/js/bootstrap.min.js"></script>
+<script src="{{ PathBase }}/Library/Moment/2.8.4/min/moment-with-locales.min.js"></script>
+<script src="{{ PathBase }}/Library/Bootstrap.DateTimePicker/3.1.3/build/js/bootstrap-datetimepicker.min.js"></script>
+<script src="{{ PathBase }}/Library/Bootstrap.Typeahead/3.1.0/bootstrap3-typeahead.min.js"></script>
 <!-- Bootflat's JS files.-->
 <script src="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/js/icheck.min.js"></script>
 <script src="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/js/jquery.fs.selecter.min.js"></script>
 <script src="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/js/jquery.fs.stepper.min.js"></script>
+<script type="text/javascript">
+    jQuery( function()
+    {
+        jQuery( 'select' ).selecter();
+        jQuery( 'input[type="text"][data-date-format]' ).datetimepicker();
+        jQuery( 'input[type="text"][data-source]' ).typeahead();
+    } );
+</script>
 </body>
 </html>
 
