--- a/Sphere/Application/Management/PersonalData/Student/Identity.twig
+++ b/Sphere/Application/Management/PersonalData/Student/Identity.twig
@@ -1,98 +1,46 @@
-<h4>Grunddaten</h4>
-<form action="" method="post">
-    <div class="row">
-        <div class="col-md-6">
-
-            <div class="form-group {{ PersonGenderGroup }}">
-                <div class="input-group">
-            <span class="input-group-addon">
-                <span class="glyphicon glyphicon-adjust"></span>
-            </span>
-                    <select name="PersonGender">
-                        <option>Männlich</option>
-                        <option>Weiblich</option>
-                    </select>
-                    {{ PersonGenderFeedbackIcon }}
-                </div>
-                {{ PersonGenderFeedbackMessage }}
-            </div>
-
-            <div class="form-group {{ PersonFirstNameGroup }}">
-                <div class="input-group">
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-user"></span>
-                        </span>
-                    <input type="text" class="form-control" name="PersonFirstName" placeholder="Vorname"
-                           value="{{ PersonFirstNameValue }}"/>
-                    {{ PersonFirstNameFeedbackIcon }}
-                </div>
-                {{ PersonFirstNameFeedbackMessage }}
-            </div>
-
-            <div class="form-group {{ PersonMiddleNameGroup }}">
-                <div class="input-group">
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-user"></span>
-                        </span>
-                    <input type="text" class="form-control" name="PersonMiddleName" placeholder="Zweitname"
-                           value="{{ PersonMiddleNameValue }}"/>
-                    {{ PersonMiddleNameFeedbackIcon }}
-                </div>
-                {{ PersonMiddleNameFeedbackMessage }}
-            </div>
-
-            <div class="form-group {{ PersonLastNameGroup }}">
-                <div class="input-group">
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-user"></span>
-                        </span>
-                    <input type="text" class="form-control" name="PersonLastName" placeholder="Nachname"
-                           value="{{ PersonLastNameValue }}"/>
-                    {{ PersonLastNameFeedbackIcon }}
-                </div>
-                {{ PersonLastNameFeedbackMessage }}
-            </div>
-
-        </div>
-
-        <div class="col-md-6">
+Schüler Grunddaten
+Geschlecht:  m |  w
+Name, Vorname*:   Geb.tag, -ort:
+Staat, Konf.:
+Straße:
+PLZ, Ort:
+Telefon:
+E-Mail:
+Bemerkungen:
 
 
-            <div class="form-group {{ PersonFirstNameGroup }}">
-                <div class="input-group date">
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-user"></span>
-                        </span>
-                    <input type="text" class="form-control" name="PersonFirstName" placeholder=""
-                           data-date-format="DD.MM.YYYY" data-date-language="de" data-date-pickTime="false"
-                           data-bv-date-format="DD.MM.YYYY"
-                           value="{{ PersonFirstNameValue }}"/>
-
-                    <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
-                        </span>
-                    {{ PersonFirstNameFeedbackIcon }}
-                </div>
-                {{ PersonFirstNameFeedbackMessage }}
-            </div>
-
-
-            <div class="form-group">
-                <div class="input-group">
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-user"></span>
-                        </span>
-                    <input class="form-control" type="text" data-source="['1','12','13']" autocomplete="off">
-                </div>
-
-            </div>
+Sorgeberechtigte:
+Status, Sorgeb.:
+Geschlecht:   m |  w     m |  w
+Titel:
+Name:
+Vorname:
+Straße:
+PLZ:
+Ort:
+E-Mail:
+Telefon1:
+Telefon2:
+Telefon3:
+KK:
+im Notfall:
+Kommentar:
 
 
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="input-group">
-            <button type="submit" class="btn btn-primary">Anlegen</button>
-        </div>
-    </div>
-</form>
-
+Schulintern:
+Schülernummer:
+Zugang:
+Klasse, Stammg:
+abgebende Sch.:
+Aufnahmedatum:
+aufnehmende S.:
+Aufnahmedatum:
+Fotoerlaubnis:
+Schließfach:
+Religionsunt.:    J.
+Fremdspr. 1:    J.
+Fremdspr. 2:    J.
+Fremdspr. 3:    J.
+Profil 1:    J.
+Profil 2:    J.
+Neigungskurs:    J.
