--- a/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
+++ b/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
@@ -11,11 +11,12 @@
     <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/"/>
     <link rel="schema.DCTERMS" href="http://purl.org/dc/terms/"/>
 
-    <link rel="stylesheet" href="{{ PathBase }}/Library/Bootstrap/3.2.0/dist/css/bootstrap.min.css" property="">
-    <link rel="stylesheet" href="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/css/bootflat.css" property="">
+    <link rel="stylesheet" href="{{ PathBase }}/Library/Twitter.Typeahead.Bootstrap/1.0.0/typeaheadjs.css" property="">
     <link rel="stylesheet"
           href="{{ PathBase }}/Library/Bootstrap.DateTimePicker/3.1.3/build/css/bootstrap-datetimepicker.min.css"
           property="">
+    <link rel="stylesheet" href="{{ PathBase }}/Library/Bootstrap/3.2.0/dist/css/bootstrap.min.css" property="">
+    <link rel="stylesheet" href="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/css/bootflat.css" property="">
     <link rel="stylesheet" href="{{ PathBase }}/Sphere/Client/Style/Style.css" property=""/>
 
     <link rel="shortcut icon" type="image/x-icon" href="{{ PathBase }}/favicon.ico"/>
@@ -54,18 +55,17 @@
 <script src="{{ PathBase }}/Library/Bootstrap/3.2.0/dist/js/bootstrap.min.js"></script>
 <script src="{{ PathBase }}/Library/Moment/2.8.4/min/moment-with-locales.min.js"></script>
 <script src="{{ PathBase }}/Library/Bootstrap.DateTimePicker/3.1.3/build/js/bootstrap-datetimepicker.min.js"></script>
-<script src="{{ PathBase }}/Library/Bootstrap.Typeahead/3.1.0/bootstrap3-typeahead.min.js"></script>
+<script src="{{ PathBase }}/Library/Twitter.Typeahead/0.10.5/dist/typeahead.bundle.min.js"></script>
 <!-- Bootflat's JS files.-->
 <script src="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/js/icheck.min.js"></script>
 <script src="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/js/jquery.fs.selecter.min.js"></script>
 <script src="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/js/jquery.fs.stepper.min.js"></script>
 <script type="text/javascript">
     jQuery( function()
-    {
-        jQuery( 'select' ).selecter();
-        jQuery( 'input[type="text"][data-date-format]' ).datetimepicker();
-        jQuery( 'input[type="text"][data-source]' ).typeahead();
-    } );
+        {
+            jQuery( 'input[type="text"][data-date-format]' ).datetimepicker();
+        }
+    );
 </script>
 </body>
 </html>
