Research: Management (Person,Address)

--- a/Sphere/Application/Management/PersonalData/Form/Gender.twig
+++ b/Sphere/Application/Management/PersonalData/Form/Gender.twig
@@ -1,11 +1,11 @@
 <div class="form-group">
-    <label>Geschlecht</label>
+    <label for="PersonGender">Geschlecht</label>
 
     <div class="input-group">
         <span class="input-group-addon">
             <span class="glyphicon glyphicon-adjust"></span>
         </span>
-        <select name="PersonGender">
+        <select id="PersonGender" name="PersonGender">
             <option value="0">Männlich</option>
             <option value="1">Weiblich</option>
         </select>
