--- a/Sphere/Client/Component/Element/Repository/Navigation/LevelApplication/Main.twig
+++ b/Sphere/Client/Component/Element/Repository/Navigation/LevelApplication/Main.twig
@@ -1,5 +1,6 @@
 <!-- Navigation (Level:Application) -->
-<nav class="navbar" role="navigation" style="border-radius: inherit; margin: inherit; border-bottom: 1px solid #DDD;">
+<nav class="navbar" role="navigation"
+     style="border-radius: inherit; margin: inherit; border-bottom: 1px solid rgb(221, 221, 221);">
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-12">
