--- a/Sphere/Client/Component/Element/Repository/Navigation/LevelModule/Main.twig
+++ b/Sphere/Client/Component/Element/Repository/Navigation/LevelModule/Main.twig
@@ -1,6 +1,6 @@
 <!-- Navigation (Level:Module) -->
 <nav class="navbar navbar-default" role="navigation"
-     style="border-radius: inherit; margin: inherit; border-bottom: 1px solid #DDD;">
+     style="border-radius: inherit; margin: inherit; border-bottom: 1px solid rgb(221, 221, 221);">
     <div class="container-fluid">
         <div class="row">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
