--- a/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
+++ b/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
@@ -16,7 +16,7 @@
           href="{{ PathBase }}/Library/Bootstrap.DateTimePicker/3.1.3/build/css/bootstrap-datetimepicker.min.css"
           property="">
     <link rel="stylesheet" href="{{ PathBase }}/Library/Bootstrap/3.2.0/dist/css/bootstrap.min.css" property="">
-    <link rel="stylesheet" href="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/css/bootflat.css" property="">
+    <link rel="stylesheet" href="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/css/bootflat.min.css" property="">
     <link rel="stylesheet" href="{{ PathBase }}/Sphere/Client/Style/Style.css" property=""/>
 
     <link rel="shortcut icon" type="image/x-icon" href="{{ PathBase }}/favicon.ico"/>
@@ -24,7 +24,6 @@
 
 </head>
 <body>
-<script src="{{ PathBase }}/Library/jQuery/1.11.1/dist/jquery.min.js"></script>
 
 {{ PositionNavigation }}
 
@@ -34,23 +33,40 @@
     <div class="row">
         <div class="col-xs-12 footer  small">
             <div class="clearfix">
-                {#<div class="footer-logo">#}
-                {#<a href="#"><img src="img/footer-logo.png">Bootflat</a>#}
-                {#</div>#}
-                {#<dl class="footer-nav">#}
-                {#<dt class="nav-title">PORTFOLIO</dt>#}
-                {#<dd class="nav-item"><a href="#">Web Design</a></dd>#}
-                {#</dl>#}
+                <div class="footer-logo">
+                    <a href="#">KREDA&nbsp;<img src="/Sphere/Client/Style/Resource/logo_kreide.png" width="105"
+                                                height="61"></a>
+                </div>
+                <dl class="footer-nav">
+                    <dt class="nav-title">Mandanten</dt>
+                    <dd class="nav-item">
+                        <a href="http://www.ege-annaberg.de/">Evangelische Schulgemeinschaft Erzgebirge e.V. (EGE)</a>
+                    </dd>
+                    <dd class="nav-item">
+                        <a href="http://eszc.de/">Freie Evangelische Schulverein Chemnitz e.V. (ESZC)</a>
+                    </dd>
+                </dl>
+                <dl class="footer-nav">
+                    <dt class="nav-title">Applikation</dt>
+                    <dd class="nav-item">
+                        <a href="#">Impressum</a>
+                    </dd>
+                    <dd class="nav-item">
+                        <a href="http://www.haus-der-edv.de">Support</a>
+                    </dd>
+                </dl>
             </div>
-            <div class="footer-copyright text-center">© 2014 - Erstellt in {{ PositionRuntime }}</div>
+            <div class="footer-copyright text-center">© 2014 - Mandant: {{ PositionConsumer }} - Erstellt
+                in {{ PositionRuntime }}</div>
 
-            <div>
-                {{ PositionDebugger }}
-            </div>
+            {#<div>#}
+            {#{{ PositionDebugger }}#}
+            {#</div>#}
         </div>
     </div>
 </div>
-
+<!-- jQuery -->
+<script src="{{ PathBase }}/Library/jQuery/1.11.1/dist/jquery.min.js"></script>
 <!-- Bootstrap -->
 <script src="{{ PathBase }}/Library/Bootstrap/3.2.0/dist/js/bootstrap.min.js"></script>
 <script src="{{ PathBase }}/Library/Moment/2.8.4/min/moment-with-locales.min.js"></script>
