Code Review: Refactor/Quality

--- a/Sphere/Application/Management/PersonalData/Form/Birthday.twig
+++ b/Sphere/Application/Management/PersonalData/Form/Birthday.twig
@@ -14,3 +14,10 @@
     </div>
     {{ PersonBirthdayFeedbackMessage }}
 </div>
+<script type="text/javascript">
+    require( ['ModPicker'], function()
+        {
+            jQuery( 'input[type="text"][name="PersonBirthday"]' ).datetimepicker();
+        }
+    );
+</script>
