--- a/Sphere/Application/Management/PersonalData/Form/Country.twig
+++ b/Sphere/Application/Management/PersonalData/Form/Country.twig
@@ -14,38 +14,39 @@
 
 <script type="text/javascript">
 
-    jQuery( function()
-    {
-        var data = [
-            'Deutschland'
-        ];
+    require( ['ModCompleter'], function()
+        {
+            var data = [
+                'Deutschland'
+            ];
 
-        // constructs the suggestion engine
-        var states = new Bloodhound( {
-            datumTokenizer: Bloodhound.tokenizers.obj.whitespace( 'value' ),
-            queryTokenizer: Bloodhound.tokenizers.whitespace,
-            // `states` is an array of state names defined in "The Basics"
-            local: $.map( data, function( state )
-            {
-                return {value: state};
-            } )
-        } );
-
-        // kicks off the loading/processing of `local` and `prefetch`
-        states.initialize();
-
-        jQuery( '.Typeahead_Country' ).typeahead( {
-                hint: true,
-                highlight: true,
-                minLength: 1
-            },
-            {
-                name: 'states',
-                displayKey: 'value',
-                // `ttAdapter` wraps the suggestion engine in an adapter that
-                // is compatible with the typeahead jQuery plugin
-                source: states.ttAdapter()
+            // constructs the suggestion engine
+            var states = new Bloodhound( {
+                datumTokenizer: Bloodhound.tokenizers.obj.whitespace( 'value' ),
+                queryTokenizer: Bloodhound.tokenizers.whitespace,
+                // `states` is an array of state names defined in "The Basics"
+                local: $.map( data, function( state )
+                {
+                    return {value: state};
+                } )
             } );
 
-    } );
+            // kicks off the loading/processing of `local` and `prefetch`
+            states.initialize();
+
+            jQuery( '.Typeahead_Country' ).typeahead( {
+                    hint: true,
+                    highlight: true,
+                    minLength: 1
+                },
+                {
+                    name: 'states',
+                    displayKey: 'value',
+                    // `ttAdapter` wraps the suggestion engine in an adapter that
+                    // is compatible with the typeahead jQuery plugin
+                    source: states.ttAdapter()
+                } );
+
+        }
+    );
 </script>
