--- a/Sphere/Application/Management/PersonalData/Form/Gender.twig
+++ b/Sphere/Application/Management/PersonalData/Form/Gender.twig
@@ -12,7 +12,7 @@
     </div>
 </div>
 <script type="text/javascript">
-    jQuery( function()
+    require( ['ModSelecter'], function()
         {
             var guiSelect = jQuery( 'select[name="PersonGender"]' );
             guiSelect.find( 'option[value="{{ PersonGenderValue }}"]' ).attr( 'selected', 'selected' );
