--- a/Sphere/Application/Management/PersonalData/Form/State.twig
+++ b/Sphere/Application/Management/PersonalData/Form/State.twig
@@ -14,46 +14,47 @@
 
 <script type="text/javascript">
 
-    jQuery( function()
-    {
-        var data = [
-            'Alabama', 'Alaska', 'Arizona', 'Arkansas', 'California',
-            'Colorado', 'Connecticut', 'Delaware', 'Florida', 'Georgia', 'Hawaii',
-            'Idaho', 'Illinois', 'Indiana', 'Iowa', 'Kansas', 'Kentucky', 'Louisiana',
-            'Maine', 'Maryland', 'Massachusetts', 'Michigan', 'Minnesota',
-            'Mississippi', 'Missouri', 'Montana', 'Nebraska', 'Nevada', 'New Hampshire',
-            'New Jersey', 'New Mexico', 'New York', 'North Carolina', 'North Dakota',
-            'Ohio', 'Oklahoma', 'Oregon', 'Pennsylvania', 'Rhode Island',
-            'South Carolina', 'South Dakota', 'Tennessee', 'Texas', 'Utah', 'Vermont',
-            'Virginia', 'Washington', 'West Virginia', 'Wisconsin', 'Wyoming'
-        ];
+    require( ['ModCompleter'], function()
+        {
+            var data = [
+                'Alabama', 'Alaska', 'Arizona', 'Arkansas', 'California',
+                'Colorado', 'Connecticut', 'Delaware', 'Florida', 'Georgia', 'Hawaii',
+                'Idaho', 'Illinois', 'Indiana', 'Iowa', 'Kansas', 'Kentucky', 'Louisiana',
+                'Maine', 'Maryland', 'Massachusetts', 'Michigan', 'Minnesota',
+                'Mississippi', 'Missouri', 'Montana', 'Nebraska', 'Nevada', 'New Hampshire',
+                'New Jersey', 'New Mexico', 'New York', 'North Carolina', 'North Dakota',
+                'Ohio', 'Oklahoma', 'Oregon', 'Pennsylvania', 'Rhode Island',
+                'South Carolina', 'South Dakota', 'Tennessee', 'Texas', 'Utah', 'Vermont',
+                'Virginia', 'Washington', 'West Virginia', 'Wisconsin', 'Wyoming'
+            ];
 
-        // constructs the suggestion engine
-        var states = new Bloodhound( {
-            datumTokenizer: Bloodhound.tokenizers.obj.whitespace( 'value' ),
-            queryTokenizer: Bloodhound.tokenizers.whitespace,
-            // `states` is an array of state names defined in "The Basics"
-            local: $.map( data, function( state )
-            {
-                return {value: state};
-            } )
-        } );
-
-        // kicks off the loading/processing of `local` and `prefetch`
-        states.initialize();
-
-        jQuery( '.Typeahead_State' ).typeahead( {
-                hint: true,
-                highlight: true,
-                minLength: 1
-            },
-            {
-                name: 'states',
-                displayKey: 'value',
-                // `ttAdapter` wraps the suggestion engine in an adapter that
-                // is compatible with the typeahead jQuery plugin
-                source: states.ttAdapter()
+            // constructs the suggestion engine
+            var states = new Bloodhound( {
+                datumTokenizer: Bloodhound.tokenizers.obj.whitespace( 'value' ),
+                queryTokenizer: Bloodhound.tokenizers.whitespace,
+                // `states` is an array of state names defined in "The Basics"
+                local: $.map( data, function( state )
+                {
+                    return {value: state};
+                } )
             } );
 
-    } );
+            // kicks off the loading/processing of `local` and `prefetch`
+            states.initialize();
+
+            jQuery( '.Typeahead_State' ).typeahead( {
+                    hint: true,
+                    highlight: true,
+                    minLength: 1
+                },
+                {
+                    name: 'states',
+                    displayKey: 'value',
+                    // `ttAdapter` wraps the suggestion engine in an adapter that
+                    // is compatible with the typeahead jQuery plugin
+                    source: states.ttAdapter()
+                } );
+
+        }
+    );
 </script>
