Code Review: Refactor/Quality

--- a/Sphere/Application/System/Service/Token/Certification.twig
+++ b/Sphere/Application/System/Service/Token/Certification.twig
@@ -33,8 +33,8 @@
     <tbody>
     {% for Token in TokenList %}
         <tr>
-            <td>{{ Token.tblToken }}</td>
-            <td class="text-uppercase">{{ Token.TokenIdentifier }}</td>
+            <td>{{ Token.Id }}</td>
+            <td class="text-uppercase">{{ Token.Identifier }}</td>
             <td>
 
             </td>
